Criação e configuração de crud básico